generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            Int            @id @default(autoincrement())
  name          String?
  username      String?        @unique
  email         String         @unique
  emailVerified DateTime?      @map("email_verified")
  role          String         @default("user")
  avatarUrl     String?        @map("avatar_url")
  bio           String?
  createdAt     DateTime       @default(now()) @map("created_at")
  status        String         @default("active")
  socialLinks   Json?          @map("social_links")
  accounts      Account[]
  auditLogs     AuditLog[]
  comments      Comment[]
  movies        Movie[]
  notifications Notification[]
  people        Person[]
  reports       Report[]       @relation("UserReports")
  reviews       Review[]
  sessions      Session[]
  watchlist     Watchlist[]

  @@index([username])
  @@index([email])
  @@index([role])
  @@index([status])
  @@map("users")
}

model Account {
  id                Int     @id @default(autoincrement())
  userId            Int     @map("user_id")
  type              String
  provider          String
  providerAccountId String  @map("provider_account_id")
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@index([userId])
  @@map("accounts")
}

model Session {
  id           Int      @id @default(autoincrement())
  sessionToken String   @unique @map("session_token")
  userId       Int      @map("user_id")
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("sessions")
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime

  @@unique([identifier, token])
  @@map("verification_tokens")
}

model PendingRegistration {
  id          Int      @id @default(autoincrement())
  email       String   @unique
  otp         String
  callbackUrl String?  @map("callback_url")
  expiresAt   DateTime @map("expires_at")
  createdAt   DateTime @default(now()) @map("created_at")

  @@map("pending_registrations")
  @@index([email])
  @@index([expiresAt])
}

model Movie {
  id          Int           @id @default(autoincrement())
  title       String
  slug        String        @unique
  synopsis    String?
  releaseDate DateTime?     @map("release_date") @db.Date
  duration    Int?
  posterUrl   String?       @map("poster_url")
  bannerUrl   String?       @map("banner_url")
  trailerUrl  String?       @map("trailer_url")
  status      String        @default("pending")
  submitterId Int?          @map("submitter_id")
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime?     @updatedAt @map("updated_at")
  videoUrl    String?       @map("video_url")
  comments    Comment[]
  genres      MovieGenre[]
  people      MoviePerson[]
  submitter   User?         @relation(fields: [submitterId], references: [id])
  reviews     Review[]
  watchlist   Watchlist[]

  @@index([slug])
  @@index([status])
  @@index([submitterId])
  @@index([releaseDate])
  @@index([createdAt])
  @@map("movies")
}

model Genre {
  id     Int          @id @default(autoincrement())
  name   String       @unique
  slug   String       @unique
  movies MovieGenre[]

  @@index([slug])
  @@map("genres")
}

model MovieGenre {
  movieId Int   @map("movie_id")
  genreId Int   @map("genre_id")
  genre   Genre @relation(fields: [genreId], references: [id])
  movie   Movie @relation(fields: [movieId], references: [id])

  @@id([movieId, genreId])
  @@index([movieId])
  @@index([genreId])
  @@map("movie_genres")
}

model Person {
  id        Int           @id @default(autoincrement())
  name      String
  slug      String        @unique
  imageUrl  String?       @map("image_url")
  bio       String?
  birthDate DateTime?     @map("birth_date") @db.Date
  userId    Int?          @map("user_id")
  movies    MoviePerson[]
  user      User?         @relation(fields: [userId], references: [id])

  @@index([slug])
  @@index([name])
  @@map("people")
}

model MoviePerson {
  movieId       Int     @map("movie_id")
  personId      Int     @map("person_id")
  role          String
  characterName String? @map("character_name")
  movie         Movie   @relation(fields: [movieId], references: [id])
  person        Person  @relation(fields: [personId], references: [id])

  @@id([movieId, personId, role])
  @@index([movieId])
  @@index([personId])
  @@index([role])
  @@map("movie_people")
}

model Review {
  id        Int       @id @default(autoincrement())
  userId    Int       @map("user_id")
  movieId   Int       @map("movie_id")
  rating    Int
  content   String?
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime? @updatedAt @map("updated_at")
  movie     Movie     @relation(fields: [movieId], references: [id])
  user      User      @relation(fields: [userId], references: [id])

  @@unique([userId, movieId])
  @@index([movieId])
  @@index([userId])
  @@index([rating])
  @@index([createdAt])
  @@map("reviews")
}

model Comment {
  id        Int       @id @default(autoincrement())
  userId    Int       @map("user_id")
  movieId   Int       @map("movie_id")
  content   String
  parentId  Int?      @map("parent_id")
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime? @updatedAt @map("updated_at")
  movie     Movie     @relation(fields: [movieId], references: [id])
  parent    Comment?  @relation("CommentReplies", fields: [parentId], references: [id])
  replies   Comment[] @relation("CommentReplies")
  user      User      @relation(fields: [userId], references: [id])

  @@index([movieId])
  @@index([userId])
  @@index([parentId])
  @@index([createdAt])
  @@map("comments")
}

model Watchlist {
  userId    Int      @map("user_id")
  movieId   Int      @map("movie_id")
  createdAt DateTime @default(now()) @map("created_at")
  movie     Movie    @relation(fields: [movieId], references: [id])
  user      User     @relation(fields: [userId], references: [id])

  @@id([userId, movieId])
  @@index([userId])
  @@index([movieId])
  @@index([createdAt])
  @@map("watchlist")
}

model Report {
  id         Int      @id @default(autoincrement())
  reporterId Int?     @map("reporter_id")
  targetType String   @map("target_type")
  targetId   Int      @map("target_id")
  reason     String
  status     String   @default("pending")
  createdAt  DateTime @default(now()) @map("created_at")
  reporter   User?    @relation("UserReports", fields: [reporterId], references: [id])

  @@index([reporterId])
  @@index([targetType])
  @@index([targetId])
  @@index([status])
  @@index([createdAt])
  @@map("reports")
}

model Notification {
  id        Int      @id @default(autoincrement())
  userId    Int      @map("user_id")
  type      String
  title     String
  message   String?
  isRead    Boolean  @default(false) @map("is_read")
  link      String?
  createdAt DateTime @default(now()) @map("created_at")
  user      User     @relation(fields: [userId], references: [id])

  @@index([userId])
  @@index([isRead])
  @@index([createdAt])
  @@map("notifications")
}

model AuditLog {
  id         Int      @id @default(autoincrement())
  adminId    Int?     @map("admin_id")
  action     String
  targetType String   @map("target_type")
  targetId   Int      @map("target_id")
  details    Json?
  createdAt  DateTime @default(now()) @map("created_at")
  admin      User?    @relation(fields: [adminId], references: [id])

  @@index([adminId])
  @@index([action])
  @@index([targetType])
  @@index([targetId])
  @@index([createdAt])
  @@map("audit_logs")
}
