CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "username" varchar UNIQUE,
  "email" varchar UNIQUE NOT NULL,
  "email_verified" timestamp,
  "role" varchar NOT NULL DEFAULT 'user',
  "avatar_url" varchar,
  "bio" text,
  "created_at" timestamp DEFAULT (now()),
  "status" varchar DEFAULT 'active',
  "social_links" json
);

CREATE TABLE "accounts" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer,
  "type" varchar NOT NULL,
  "provider" varchar NOT NULL,
  "provider_account_id" varchar NOT NULL,
  "refresh_token" text,
  "access_token" text,
  "expires_at" integer,
  "token_type" varchar,
  "scope" varchar,
  "id_token" text,
  "session_state" varchar
);

CREATE TABLE "sessions" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "session_token" varchar UNIQUE NOT NULL,
  "user_id" integer,
  "expires" timestamp NOT NULL
);

CREATE TABLE "verification_tokens" (
  "identifier" varchar NOT NULL,
  "token" varchar UNIQUE NOT NULL,
  "expires" timestamp NOT NULL
);

CREATE TABLE "movies" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" varchar NOT NULL,
  "slug" varchar UNIQUE NOT NULL,
  "synopsis" text,
  "release_date" date,
  "duration" integer,
  "poster_url" varchar,
  "banner_url" varchar,
  "trailer_url" varchar,
  "status" varchar DEFAULT 'pending',
  "submitter_id" integer,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp
);

CREATE TABLE "genres" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL,
  "slug" varchar UNIQUE NOT NULL
);

CREATE TABLE "movie_genres" (
  "movie_id" integer,
  "genre_id" integer,
  PRIMARY KEY ("movie_id", "genre_id")
);

CREATE TABLE "people" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "slug" varchar UNIQUE NOT NULL,
  "image_url" varchar,
  "bio" text,
  "birth_date" date
);

CREATE TABLE "movie_people" (
  "movie_id" integer,
  "person_id" integer,
  "role" varchar NOT NULL,
  "character_name" varchar,
  PRIMARY KEY ("movie_id", "person_id", "role")
);

CREATE TABLE "reviews" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer,
  "movie_id" integer,
  "rating" integer NOT NULL,
  "content" text,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp
);

CREATE TABLE "comments" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer,
  "movie_id" integer,
  "content" text NOT NULL,
  "parent_id" integer,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp
);

CREATE TABLE "watchlist" (
  "user_id" integer,
  "movie_id" integer,
  "created_at" timestamp DEFAULT (now()),
  PRIMARY KEY ("user_id", "movie_id")
);

CREATE TABLE "reports" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "reporter_id" integer,
  "target_type" varchar NOT NULL,
  "target_id" integer NOT NULL,
  "reason" varchar NOT NULL,
  "status" varchar DEFAULT 'pending',
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "notifications" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer,
  "type" varchar NOT NULL,
  "title" varchar NOT NULL,
  "message" text,
  "is_read" boolean DEFAULT false,
  "link" varchar,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "audit_logs" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "admin_id" integer,
  "action" varchar NOT NULL,
  "target_type" varchar NOT NULL,
  "target_id" integer NOT NULL,
  "details" json,
  "created_at" timestamp DEFAULT (now())
);

CREATE INDEX ON "users" ("username");

CREATE INDEX ON "users" ("email");

CREATE INDEX ON "users" ("role");

CREATE INDEX ON "users" ("status");

CREATE UNIQUE INDEX ON "accounts" ("provider", "provider_account_id");

CREATE INDEX ON "accounts" ("user_id");

CREATE INDEX ON "sessions" ("user_id");

CREATE UNIQUE INDEX ON "verification_tokens" ("identifier", "token");

CREATE INDEX ON "movies" ("slug");

CREATE INDEX ON "movies" ("status");

CREATE INDEX ON "movies" ("submitter_id");

CREATE INDEX ON "movies" ("release_date");

CREATE INDEX ON "movies" ("created_at");

CREATE INDEX ON "genres" ("slug");

CREATE INDEX ON "movie_genres" ("movie_id");

CREATE INDEX ON "movie_genres" ("genre_id");

CREATE INDEX ON "people" ("slug");

CREATE INDEX ON "people" ("name");

CREATE INDEX ON "movie_people" ("movie_id");

CREATE INDEX ON "movie_people" ("person_id");

CREATE INDEX ON "movie_people" ("role");

CREATE UNIQUE INDEX ON "reviews" ("user_id", "movie_id");

CREATE INDEX ON "reviews" ("movie_id");

CREATE INDEX ON "reviews" ("user_id");

CREATE INDEX ON "reviews" ("rating");

CREATE INDEX ON "reviews" ("created_at");

CREATE INDEX ON "comments" ("movie_id");

CREATE INDEX ON "comments" ("user_id");

CREATE INDEX ON "comments" ("parent_id");

CREATE INDEX ON "comments" ("created_at");

CREATE INDEX ON "watchlist" ("user_id");

CREATE INDEX ON "watchlist" ("movie_id");

CREATE INDEX ON "watchlist" ("created_at");

CREATE INDEX ON "reports" ("reporter_id");

CREATE INDEX ON "reports" ("target_type");

CREATE INDEX ON "reports" ("target_id");

CREATE INDEX ON "reports" ("status");

CREATE INDEX ON "reports" ("created_at");

CREATE INDEX ON "notifications" ("user_id");

CREATE INDEX ON "notifications" ("is_read");

CREATE INDEX ON "notifications" ("created_at");

CREATE INDEX ON "audit_logs" ("admin_id");

CREATE INDEX ON "audit_logs" ("action");

CREATE INDEX ON "audit_logs" ("target_type");

CREATE INDEX ON "audit_logs" ("target_id");

CREATE INDEX ON "audit_logs" ("created_at");

ALTER TABLE "accounts" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "sessions" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "movies" ADD FOREIGN KEY ("submitter_id") REFERENCES "users" ("id");

ALTER TABLE "movie_genres" ADD FOREIGN KEY ("movie_id") REFERENCES "movies" ("id");

ALTER TABLE "movie_genres" ADD FOREIGN KEY ("genre_id") REFERENCES "genres" ("id");

ALTER TABLE "movie_people" ADD FOREIGN KEY ("movie_id") REFERENCES "movies" ("id");

ALTER TABLE "movie_people" ADD FOREIGN KEY ("person_id") REFERENCES "people" ("id");

ALTER TABLE "reviews" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "reviews" ADD FOREIGN KEY ("movie_id") REFERENCES "movies" ("id");

ALTER TABLE "comments" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "comments" ADD FOREIGN KEY ("movie_id") REFERENCES "movies" ("id");

ALTER TABLE "comments" ADD FOREIGN KEY ("parent_id") REFERENCES "comments" ("id");

ALTER TABLE "watchlist" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "watchlist" ADD FOREIGN KEY ("movie_id") REFERENCES "movies" ("id");

ALTER TABLE "reports" ADD FOREIGN KEY ("reporter_id") REFERENCES "users" ("id");

ALTER TABLE "notifications" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "audit_logs" ADD FOREIGN KEY ("admin_id") REFERENCES "users" ("id");
